--- a/css/style.css
+++ b/css/style.css
@@ -1262,3 +1262,9 @@ figure {
   z-index: 9999;
   background: url(../images/hourglass.svg) center no-repeat #222222;
 }
+
+.logoH{
+  max-height:100%;
+     min-height:20%;
+     width:50%;
+}
