--- a/P O Z O_files/css/style.css
+++ b/P O Z O_files/css/style.css
@@ -529,8 +529,8 @@ a {
     padding: 0;
 }
 .navbar-brand img {
-    height: 80px;
-    width: 100%;
+    height: 70px;
+    width: auto;
     display: block;
     -webkit-transition: all 0.3s ease-out;
     transition: all 0.3s ease-out;
