--- a/sass/style.scss
+++ b/sass/style.scss
@@ -5,7 +5,7 @@ $grid-gutter-width: 40px;
 $border-radius-base:  4px;
 $padding-base-vertical: 14px;
 
-$brand-primary: #F69D9D;
+$brand-primary: #5a5a5a;
  
 
 $brand-white: #fff;
